# genmeta-xtask-release

./: Cargo.toml
.github/workflows/: ci.yml
src/: brew.rs  channel.rs  cli.rs  contract.rs  lib.rs  manifest.rs  package.rs  plan.rs  publish.rs  report.rs  requires.rs  runner.rs  s3.rs  scoop.rs  sibling.rs  system.rs  template.rs
tests/: cli_v0.rs  contract_v0.rs
tests/fixtures/: gateway.release.toml  gmutils.release.toml
