[package]
name = "genmeta-xtask-release"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Release packaging contract and planning library for Genmeta xtasks"
repository = "https://github.com/genmeta/genmeta-xtask-release"
publish = false

[dependencies]
aws-credential-types = "1"
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "rustls", "sigv4a"] }
cargo_metadata = "0.21"
debversion = "0.5.2"
rpm-version = "0.5.0"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
snafu = "0.9"
toml = "0.9"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
