[package]
name = "genmeta-xtask-release"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Release packaging contract and planning library for Genmeta xtasks"
repository = "https://github.com/genmeta/genmeta-xtask-release"
publish = false

[dependencies]
cargo_metadata = "0.21"
clap = { version = "4", features = ["derive"] }
debversion = "0.5.2"
ring = "0.17"
rpm-version = "0.5.0"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
snafu = "0.9"
toml = "0.9"
url = "2"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "macros"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
